--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg-light">
+        <!-- Nav Starts -->
+      <nav class="container navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
           <div>
-            <!-- <a class="navbar-brand" href="#"><h4>EduTech</h4></a> -->
-            <!-- <a href="" class="navbar-brand"><h4>EduTech</h4></a> -->
-            <a href="" style="text-decoration: none;"><h4>EduTech</h4></a>
+            <a href="" style="text-decoration: none;"><h5>EduTech</h5></a>
           </div>
           <div>
             <button
@@ -58,6 +57,47 @@
           </div>
         </div>
       </nav>
+      <!-- Nav Ended -->
+      <!-- Car Starts -->
+      <section class="container">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+            <div class="carousel-inner">
+              <div class="carousel-item py-3 active">
+                <img src="images/cover/RDT_20220708_1348121114795526033918625.jpg" class="d-block w-100 opacity-75" alt="...">
+                <div class="carousel-caption  d-md-block">
+                  <h5>Get Started Learning</h5>
+                  <p>It is a long established looking at its layout.</p>
+                  <button type="button" class="btn btn-primary">Get Started</button>
+                </div>
+              </div>
+              <div class="carousel-item py-3">
+                <img src="images/cover/RDT_20220624_0951582279889104406194163.jpg" class="d-block w-100 opacity-75" alt="...">
+                <div class="carousel-caption  d-md-block">
+                  <h5>Get Started Learning</h5>
+                  <p>It is a long established looking at its layout.</p>
+                  <button type="button" class="btn btn-primary">Get Started</button>
+                </div>
+              </div>
+              <div class="carousel-item py-3">
+                <img src="images/cover/RDT_20220624_0955056494701253091389175.jpg" class="d-block w-100 opacity-75" alt="...">
+                <div class="carousel-caption  d-md-block">
+                  <h5>Get Started Learning</h5>
+                  <p>It is a long established looking at its layout.</p>
+                  <button type="button" class="btn btn-primary">Get Started</button>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+      </section>
+      <!-- Car Ends -->
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
