--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
             <div class="carousel-inner">
               <div class="carousel-item py-3 active">
-                <img src="images/cover/RDT_20220708_1348121114795526033918625.jpg" class="d-block w-100 opacity-75" alt="...">
+                <img src="images/cover/RDT_20220708_1348121114795526033918625.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption  d-md-block">
                   <h5>Get Started Learning</h5>
                   <p>It is a long established looking at its layout.</p>
@@ -71,7 +71,7 @@
                 </div>
               </div>
               <div class="carousel-item py-3">
-                <img src="images/cover/RDT_20220624_0951582279889104406194163.jpg" class="d-block w-100 opacity-75" alt="...">
+                <img src="images/cover/RDT_20220624_0951582279889104406194163.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption  d-md-block">
                   <h5>Get Started Learning</h5>
                   <p>It is a long established looking at its layout.</p>
@@ -79,7 +79,7 @@
                 </div>
               </div>
               <div class="carousel-item py-3">
-                <img src="images/cover/RDT_20220624_0955056494701253091389175.jpg" class="d-block w-100 opacity-75" alt="...">
+                <img src="images/cover/RDT_20220624_0955056494701253091389175.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption  d-md-block">
                   <h5>Get Started Learning</h5>
                   <p>It is a long established looking at its layout.</p>
