--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     />
   </head>
   <body>
+    <!-- Header Starts -->
     <header>
         <!-- Nav Starts -->
       <nav class="container navbar navbar-expand-lg bg-light">
@@ -99,6 +100,13 @@
       </section>
       <!-- Car Ends -->
     </header>
+    <!-- Header Ends -->
+    <main>
+        <section class="Container my-5">
+            <h1 class="text-center">Discover Our Popular Courses</h1>
+            <p class="text-center">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        </section>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
