--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
     />
+    <style>
+        .color-text{
+            color:#289BDE;
+        }
+    </style>
   </head>
   <body>
     <!-- Header Starts -->
@@ -102,10 +107,105 @@
     </header>
     <!-- Header Ends -->
     <main>
-        <section class="Container my-5">
+        <section class="Container mt-5 px-5">
             <h1 class="text-center">Discover Our Popular Courses</h1>
             <p class="text-center">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
         </section>
+        <section class="container">
+            <div class="row d-flex justify-content-center align-items-center">
+                <div class="col-lg-5 card my-5">
+                    <div class="d-flex row align-items-center">
+                      <div class="col-md-4 col-12 p-0">
+                        <img src="images/course/course-1.png" class="rounded-start w-100" alt="...">
+                      </div>
+                      <div class="col-md-8 col-12 m-0 gy-5">
+                        <div class="card-body">
+                          <h5 class="card-title">Javascript Basic to advanced</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                          <h5 class="color-text">Price : 20$</h5>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-2">
+                  </div>
+                  <div class="col-lg-5 card my-5">
+                    <div class="d-flex row align-items-center">
+                      <div class="col-md-4 col-12 p-0">
+                        <img src="images/course/course-2.png" class="rounded-start w-100" alt="...">
+                      </div>
+                      <div class="col-md-8 col-12 m-0 gy-5">
+                        <div class="card-body">
+                          <h5 class="card-title">Javascript Basic to advanced</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                          <h5 class="color-text">Price : 20$</h5>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-5 card my-5">
+                    <div class="d-flex row align-items-center">
+                      <div class="col-md-4 col-12 p-0">
+                        <img src="images/course/course-3.png" class="rounded-start w-100" alt="...">
+                      </div>
+                      <div class="col-md-8 col-12 m-0 gy-5">
+                        <div class="card-body">
+                          <h5 class="card-title">Javascript Basic to advanced</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                          <h5 class="color-text">Price : 20$</h5>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-2">
+                </div>
+                  <div class="col-lg-5 card my-5">
+                    <div class="d-flex row align-items-center">
+                      <div class="col-md-4 col-12 p-0">
+                        <img src="images/course/course-4.png" class="rounded-start w-100" alt="...">
+                      </div>
+                      <div class="col-md-8 col-12 m-0 gy-5">
+                        <div class="card-body">
+                          <h5 class="card-title">Javascript Basic to advanced</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                          <h5 class="color-text">Price : 20$</h5>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-5 card my-5">
+                    <div class="d-flex row align-items-center">
+                      <div class="col-md-4 col-12 p-0">
+                        <img src="images/course/course-5.png" class="rounded-start w-100" alt="...">
+                      </div>
+                      <div class="col-md-8 col-12 m-0 gy-5">
+                        <div class="card-body">
+                          <h5 class="card-title">Javascript Basic to advanced</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                          <h5 class="color-text">Price : 20$</h5>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-2">
+                </div>
+                  <div class="col-lg-5 card my-5">
+                    <div class="d-flex row align-items-center">
+                      <div class="col-md-4 col-12 p-0">
+                        <img src="images/course/course-6.png" class="rounded-start w-100" alt="...">
+                      </div>
+                      <div class="col-md-8 col-12 m-0 gy-5">
+                        <div class="card-body">
+                          <h5 class="card-title">Javascript Basic to advanced</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                          <h5 class="color-text">Price : 20$</h5>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+        </section>
+        <section class="container text-center my-5"><button type="button" class="btn btn-primary">See More Courses</button></section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
