--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
     />
     <style>
-        .color-text{
+        .color-text-price{
             color:#289BDE;
+        }
+        .color-text{
+            color:aliceblue;
         }
     </style>
   </head>
@@ -111,25 +114,26 @@
             <h1 class="text-center">Discover Our Popular Courses</h1>
             <p class="text-center">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
         </section>
+        <!-- courses started  -->
         <section class="container">
             <div class="row d-flex justify-content-center align-items-center">
-                <div class="col-lg-5 card my-5">
+                <div class="col-lg-5 card my-5 mx-2">
                     <div class="d-flex row align-items-center">
                       <div class="col-md-4 col-12 p-0">
                         <img src="images/course/course-1.png" class="rounded-start w-100" alt="...">
                       </div>
                       <div class="col-md-8 col-12 m-0 gy-5">
                         <div class="card-body">
-                          <h5 class="card-title">Javascript Basic to advanced</h5>
+                          <h5 class="card-title">Fundamental Of UI/UX Design</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                          <h5 class="color-text">Price : 20$</h5>
+                          <h5 class="color-text-price">Price : 20$</h5>
                         </div>
                       </div>
                     </div>
                   </div>
                   <div class="col-lg-1">
                   </div>
-                  <div class="col-lg-5 card my-5">
+                  <div class="col-lg-5 card my-5 mx-2">
                     <div class="d-flex row align-items-center">
                       <div class="col-md-4 col-12 p-0">
                         <img src="images/course/course-2.png" class="rounded-start w-100" alt="...">
@@ -138,74 +142,109 @@
                         <div class="card-body">
                           <h5 class="card-title">Javascript Basic to advanced</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                          <h5 class="color-text">Price : 20$</h5>
+                          <h5 class="color-text-price">Price : 20$</h5>
                         </div>
                       </div>
                     </div>
                   </div>
-                  <div class="col-lg-5 card my-5">
+                  <div class="col-lg-5 card my-5 mx-2">
                     <div class="d-flex row align-items-center">
                       <div class="col-md-4 col-12 p-0">
                         <img src="images/course/course-3.png" class="rounded-start w-100" alt="...">
                       </div>
                       <div class="col-md-8 col-12 m-0 gy-5">
                         <div class="card-body">
-                          <h5 class="card-title">Javascript Basic to advanced</h5>
+                          <h5 class="card-title">Fullstack Web Development</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                          <h5 class="color-text">Price : 20$</h5>
+                          <h5 class="color-text-price">Price : 20$</h5>
                         </div>
                       </div>
                     </div>
                   </div>
                   <div class="col-lg-1">
                 </div>
-                  <div class="col-lg-5 card my-5">
+                  <div class="col-lg-5 card my-5 mx-2">
                     <div class="d-flex row align-items-center">
                       <div class="col-md-4 col-12 p-0">
                         <img src="images/course/course-4.png" class="rounded-start w-100" alt="...">
                       </div>
                       <div class="col-md-8 col-12 m-0 gy-5">
                         <div class="card-body">
-                          <h5 class="card-title">Javascript Basic to advanced</h5>
+                          <h5 class="card-title">Digital Marketing</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                          <h5 class="color-text">Price : 20$</h5>
+                          <h5 class="color-text-price">Price : 20$</h5>
                         </div>
                       </div>
                     </div>
                   </div>
-                  <div class="col-lg-5 card my-5">
+                  <div class="col-lg-5 card my-5 mx-2">
                     <div class="d-flex row align-items-center">
                       <div class="col-md-4 col-12 p-0">
                         <img src="images/course/course-5.png" class="rounded-start w-100" alt="...">
                       </div>
                       <div class="col-md-8 col-12 m-0 gy-5">
                         <div class="card-body">
-                          <h5 class="card-title">Javascript Basic to advanced</h5>
+                          <h5 class="card-title">Photography Basic Rules</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                          <h5 class="color-text">Price : 20$</h5>
+                          <h5 class="color-text-price">Price : 20$</h5>
                         </div>
                       </div>
                     </div>
                   </div>
                   <div class="col-lg-1">
                 </div>
-                  <div class="col-lg-5 card my-5">
+                  <div class="col-lg-5 card my-5 mx-2">
                     <div class="d-flex row align-items-center">
                       <div class="col-md-4 col-12 p-0">
                         <img src="images/course/course-6.png" class="rounded-start w-100" alt="...">
                       </div>
                       <div class="col-md-8 col-12 m-0 gy-5">
                         <div class="card-body">
-                          <h5 class="card-title">Javascript Basic to advanced</h5>
+                          <h5 class="card-title">Motion Graphics</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                          <h5 class="color-text">Price : 20$</h5>
+                          <h5 class="color-text-price">Price : 20$</h5>
                         </div>
                       </div>
                     </div>
                   </div>
             </div>
         </section>
-        <section class="container text-center my-5"><button type="button" class="btn btn-primary">See More Courses</button></section>
+        <section class="container text-center"><button type="button" class="btn btn-primary my-5">See More Courses</button></section>
+        <!-- courses finished -->
+        <!-- Modal sectiion starts -->
+        <section class="container my-5 rounded" style="background-color: #289BDE;"> 
+            <div class="row align-items-center my-5 g-5">
+                <div class="col-lg-6 col-md-12 col-12 my-5">
+                    <h1 class="color-text">Ready to join?</h1>
+                    <p class="color-text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                </div>
+                <div class="col-lg-6 col-md-12 col-12 position-relative my-5">
+                    <!-- Button trigger modal -->
+<button type="button" class="btn btn-light position-absolute top-50 start-50 translate-middle-y" style="color:#289BDE" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    <h4>Register Now</h4>
+  </button>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          Look I have made the modal so be happy!
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
