--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             </div>
         </section>
         <!-- Modal Finished -->
-        <!-- Frequently Section -->
+        <!-- Frequently Section started -->
         <section class="Container mt-5 px-5">
             <h1 class="text-center">Frequently Asked Questions</h1>
             <p class="text-center">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
@@ -305,6 +305,19 @@
                       </div>
                     </div>
                   </div>
+            </div>
+        </section>
+        <!-- Frequently Finished -->
+        <!-- Companies starts-->
+        <section class="container d-none d-md-none d-lg-block">
+            <h1 class="text-center">Trusted by over 800+ companies</h1>
+            <div class="d-flex justify-content-between align-items-center my-5">
+                <div class="px-1"><img src="images/company/company-1.png" alt=""></div>
+                <div class="px-1"><img src="images/company/company-2.png" alt=""></div>
+                <div class="px-1"><img src="images/company/company-3.png" alt=""></div>
+                <div class="px-1"><img src="images/company/company-4.png" alt=""></div>
+                <div class="px-1"><img src="images/company/company-5.png" alt=""></div>
+                <div class="px-1"><img src="images/company/company-6.png" alt=""></div>
             </div>
         </section>
     </main>
