--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         .color-text{
             color:aliceblue;
         }
+        .fa-brands{
+            font-size: 30px;
+        }
     </style>
   </head>
   <body>
@@ -320,7 +323,23 @@
                 <div class="px-1"><img src="images/company/company-6.png" alt=""></div>
             </div>
         </section>
+        <!-- Companies Ends -->
     </main>
+    <footer>
+        <section style="background-color: #161616;">
+            <div class="py-5">
+                <h1 class="text-center color-text">EduTech</h1>
+            <p class="text-center color-text">Office 41, Zawaya Buildin, Ghala Muscat</p>
+            <p class="text-center color-text">Privacy Ploicy  |   Terms of use</p>
+            </div>
+            <div class="d-flex justify-content-center mb-5">
+                <a class="px-2 mb-5" href="https://www.facebook.com/alpha00790"><i  class=" fa-brands fa-facebook"></i></a>
+                <a class="px-2 mb-5" href="https://github.com/Shaikat0079"><i  class=" fa-brands fa-github"></i></a>
+                <a class="px-2 mb-5" href="https://www.linkedin.com/in/shaikat-barua-78aab3239/"><i  class=" fa-brands fa-linkedin"></i></a>
+            </div>
+        </section>
+    </footer>
+    <script src="https://kit.fontawesome.com/8b8393bace.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
