--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                       </div>
                       <div class="col-md-8 col-12 m-0 gy-5">
                         <div class="card-body">
-                          <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                          <h5 class="card-title">Fundamental Of UI/UX</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
                           <h5 class="color-text-price">Price : 20$</h5>
                         </div>
