--- a/index.html
+++ b/index.html
@@ -119,97 +119,112 @@
         </section>
         <!-- courses started  -->
         <section class="container">
-            <div class="row d-flex justify-content-center align-items-center">
-                <div class="col-lg-5 card my-5 mx-2">
-                    <div class="d-flex row align-items-center">
-                      <div class="col-md-4 col-12 p-0">
-                        <img src="images/course/course-1.png" class="rounded-start w-100" alt="...">
-                      </div>
-                      <div class="col-md-8 col-12 m-0 gy-5">
-                        <div class="card-body">
-                          <h5 class="card-title">Fundamental Of UI/UX</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                          <h5 class="color-text-price">Price : 20$</h5>
+            <div class="container">
+                <div class="row my-5">
+                    <div class="col-lg-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-1.png" class="img-fluid rounded-start w-100 h-100" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                                        <p class="card-text">If you are looking for several courses that you can opt for after
+                                            your primary school studies this is the right place for you.</p>
+                                        <h4 class="card-text color-text-price">Price : 20$</h4>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                      </div>
                     </div>
-                  </div>
-                  <div class="col-lg-1">
-                  </div>
-                  <div class="col-lg-5 card my-5 mx-2">
-                    <div class="d-flex row align-items-center">
-                      <div class="col-md-4 col-12 p-0">
-                        <img src="images/course/course-2.png" class="rounded-start w-100" alt="...">
-                      </div>
-                      <div class="col-md-8 col-12 m-0 gy-5">
-                        <div class="card-body">
-                          <h5 class="card-title">Javascript Basic to advanced</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                          <h5 class="color-text-price">Price : 20$</h5>
+                    <div class="col-lg-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-2.png" class="img-fluid rounded-start w-100 h-100" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">CJavascript Basic to advanced</h5>
+                                        <p class="card-text">If you are looking for several courses that you can opt for after
+                                            your primary school studies this is the right place for you.</p>
+                                        <h4 class="card-text color-text-price">Price : 20$</h4>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                      </div>
                     </div>
-                  </div>
-                  <div class="col-lg-5 card my-5 mx-2">
-                    <div class="d-flex row align-items-center">
-                      <div class="col-md-4 col-12 p-0">
-                        <img src="images/course/course-3.png" class="rounded-start w-100" alt="...">
-                      </div>
-                      <div class="col-md-8 col-12 m-0 gy-5">
-                        <div class="card-body">
-                          <h5 class="card-title">Fullstack Web Development</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                          <h5 class="color-text-price">Price : 20$</h5>
+                    <div class="col-lg-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-3.png" class="img-fluid rounded-start w-100 h-100" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Fullstack Web Development</h5>
+                                        <p class="card-text">If you are looking for several courses that you can opt for after
+                                            your primary school studies this is the right place for you.</p>
+                                        <h4 class="card-text color-text-price">Price : 20$</h4>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                      </div>
                     </div>
-                  </div>
-                  <div class="col-lg-1">
+                    <div class="col-lg-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-4.png" class="img-fluid rounded-start w-100 h-100" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Digital Marketing</h5>
+                                        <p class="card-text">If you are looking for several courses that you can opt for after
+                                            your primary school studies this is the right place for you.</p>
+                                        <h4 class="card-text color-text-price">Price : 20$</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-5.png" class="img-fluid rounded-start w-100 h-100" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Photography Basic Rules</h5>
+                                        <p class="card-text">If you are looking for several courses that you can opt for after
+                                            your primary school studies this is the right place for you.</p>
+                                        <h4 class="card-text color-text-price">Price : 20$</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-6.png" class="img-fluid rounded-start w-100 h-100" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Motion Graphics</h5>
+                                        <p class="card-text">If you are looking for several courses that you can opt for after
+                                            your primary school studies this is the right place for you.</p>
+                                        <h4 class="card-text color-text-price">Price : 20$</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+        
                 </div>
-                  <div class="col-lg-5 card my-5 mx-2">
-                    <div class="d-flex row align-items-center">
-                      <div class="col-md-4 col-12 p-0">
-                        <img src="images/course/course-4.png" class="rounded-start w-100" alt="...">
-                      </div>
-                      <div class="col-md-8 col-12 m-0 gy-5">
-                        <div class="card-body">
-                          <h5 class="card-title">Digital Marketing</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                          <h5 class="color-text-price">Price : 20$</h5>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-5 card my-5 mx-2">
-                    <div class="d-flex row align-items-center">
-                      <div class="col-md-4 col-12 p-0">
-                        <img src="images/course/course-5.png" class="rounded-start w-100" alt="...">
-                      </div>
-                      <div class="col-md-8 col-12 m-0 gy-5">
-                        <div class="card-body">
-                          <h5 class="card-title">Photography Basic Rules</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                          <h5 class="color-text-price">Price : 20$</h5>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-1">
-                </div>
-                  <div class="col-lg-5 card my-5 mx-2">
-                    <div class="d-flex row align-items-center">
-                      <div class="col-md-4 col-12 p-0">
-                        <img src="images/course/course-6.png" class="rounded-start w-100" alt="...">
-                      </div>
-                      <div class="col-md-8 col-12 m-0 gy-5">
-                        <div class="card-body">
-                          <h5 class="card-title">Motion Graphics</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                          <h5 class="color-text-price">Price : 20$</h5>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
             </div>
         </section>
         <section class="container text-center"><button type="button" class="btn btn-primary my-5">See More Courses</button></section>
