Mistakes to be Found

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                       </h2>
                       <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                          <p>A semantic tag in HTML is a tag whose name clearly describes its purpose and content. HTML5 introduced several new semantic tags. These include <main> , <aside> , <section> , <article> and others.</p>
+                          <p>A semantic tag in HTML is a tag whose name clearly describes its purpose and content. HTML5 introduced several new semantic tags. These include <code>main, aside, section, article</code> and others.</p>
                         </div>
                       </div>
                     </div>
