--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
                 <div class="row my-5">
                     <div class="col-lg-6">
                         <div class="card mb-3">
-                            <div class="row g-0">
+                            <div class="row g-1">
                                 <div class="col-md-4">
                                     <img src="images/course/course-1.png" class="img-fluid rounded-start w-100 h-100" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                                        <h3 class="card-title">Fundamental Of UI/UX </h3>
                                         <p class="card-text">If you are looking for several courses that you can opt for after
                                             your primary school studies this is the right place for you.</p>
                                         <h4 class="card-text color-text-price">Price : 20$</h4>
@@ -140,13 +140,13 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="card mb-3">
-                            <div class="row g-0">
+                            <div class="row g-1">
                                 <div class="col-md-4">
                                     <img src="images/course/course-2.png" class="img-fluid rounded-start w-100 h-100" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">CJavascript Basic to advanced</h5>
+                                        <h3 class="card-title">Javascript Basic to advanced</h3>
                                         <p class="card-text">If you are looking for several courses that you can opt for after
                                             your primary school studies this is the right place for you.</p>
                                         <h4 class="card-text color-text-price">Price : 20$</h4>
@@ -157,13 +157,13 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="card mb-3">
-                            <div class="row g-0">
+                            <div class="row g-1">
                                 <div class="col-md-4">
                                     <img src="images/course/course-3.png" class="img-fluid rounded-start w-100 h-100" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Fullstack Web Development</h5>
+                                        <h3 class="card-title">Fullstack Web Development</h3>
                                         <p class="card-text">If you are looking for several courses that you can opt for after
                                             your primary school studies this is the right place for you.</p>
                                         <h4 class="card-text color-text-price">Price : 20$</h4>
@@ -174,13 +174,13 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="card mb-3">
-                            <div class="row g-0">
+                            <div class="row g-1">
                                 <div class="col-md-4">
                                     <img src="images/course/course-4.png" class="img-fluid rounded-start w-100 h-100" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Digital Marketing</h5>
+                                        <h3 class="card-title">Digital Marketing</h3>
                                         <p class="card-text">If you are looking for several courses that you can opt for after
                                             your primary school studies this is the right place for you.</p>
                                         <h4 class="card-text color-text-price">Price : 20$</h4>
@@ -191,13 +191,13 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="card mb-3">
-                            <div class="row g-0">
+                            <div class="row g-1">
                                 <div class="col-md-4">
                                     <img src="images/course/course-5.png" class="img-fluid rounded-start w-100 h-100" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Photography Basic Rules</h5>
+                                        <h3 class="card-title">Photography Basic Rules</h3>
                                         <p class="card-text">If you are looking for several courses that you can opt for after
                                             your primary school studies this is the right place for you.</p>
                                         <h4 class="card-text color-text-price">Price : 20$</h4>
@@ -208,13 +208,13 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="card mb-3">
-                            <div class="row g-0">
+                            <div class="row g-1">
                                 <div class="col-md-4">
                                     <img src="images/course/course-6.png" class="img-fluid rounded-start w-100 h-100" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Motion Graphics</h5>
+                                        <h3 class="card-title">Motion Graphics</h3>
                                         <p class="card-text">If you are looking for several courses that you can opt for after
                                             your primary school studies this is the right place for you.</p>
                                         <h4 class="card-text color-text-price">Price : 20$</h4>
