Changed some texts in courses

--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
                                 <div class="col-md-8">
                                     <div class="card-body">
                                         <h3 class="card-title">Fundamental Of UI/UX </h3>
-                                        <p class="card-text">If you are looking for several courses that you can opt for after
-                                            your primary school studies this is the right place for you.</p>
+                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
                                         <h4 class="card-text color-text-price">Price : 20$</h4>
                                     </div>
                                 </div>
@@ -147,8 +146,7 @@
                                 <div class="col-md-8">
                                     <div class="card-body">
                                         <h3 class="card-title">Javascript Basic to advanced</h3>
-                                        <p class="card-text">If you are looking for several courses that you can opt for after
-                                            your primary school studies this is the right place for you.</p>
+                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
                                         <h4 class="card-text color-text-price">Price : 20$</h4>
                                     </div>
                                 </div>
@@ -163,9 +161,8 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h3 class="card-title">Fullstack Web Development</h3>
-                                        <p class="card-text">If you are looking for several courses that you can opt for after
-                                            your primary school studies this is the right place for you.</p>
+                                        <h3 class="card-title">Fullstack Web</h3>
+                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
                                         <h4 class="card-text color-text-price">Price : 20$</h4>
                                     </div>
                                 </div>
@@ -181,8 +178,7 @@
                                 <div class="col-md-8">
                                     <div class="card-body">
                                         <h3 class="card-title">Digital Marketing</h3>
-                                        <p class="card-text">If you are looking for several courses that you can opt for after
-                                            your primary school studies this is the right place for you.</p>
+                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
                                         <h4 class="card-text color-text-price">Price : 20$</h4>
                                     </div>
                                 </div>
@@ -197,9 +193,8 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h3 class="card-title">Photography Basic Rules</h3>
-                                        <p class="card-text">If you are looking for several courses that you can opt for after
-                                            your primary school studies this is the right place for you.</p>
+                                        <h3 class="card-title">Photography Basic</h3>
+                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
                                         <h4 class="card-text color-text-price">Price : 20$</h4>
                                     </div>
                                 </div>
@@ -215,8 +210,7 @@
                                 <div class="col-md-8">
                                     <div class="card-body">
                                         <h3 class="card-title">Motion Graphics</h3>
-                                        <p class="card-text">If you are looking for several courses that you can opt for after
-                                            your primary school studies this is the right place for you.</p>
+                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
                                         <h4 class="card-text color-text-price">Price : 20$</h4>
                                     </div>
                                 </div>
